--- a/views/editassignment.handlebars
+++ b/views/editassignment.handlebars
@@ -28,12 +28,12 @@
         {{!-- input --}}
             <div class="col-md-12 mb-3">
                 <label for="input">Input</label>
-                <textarea type="text" class="form-control" id="input" name="input" rows="5" required>{{input}}</textarea>
+                <textarea type="text" class="form-control" id="input" name="input" rows="5">{{input}}</textarea>
             </div>
         {{!-- output --}}
             <div class="col-md-12 mb-3">
                 <label for="output">Ouput</label>
-                <textarea type="text" class="form-control" id="output" name="output" rows="5" required>{{output}}</textarea>
+                <textarea type="text" class="form-control" id="output" name="output" rows="5">{{output}}</textarea>
             </div>
         {{!-- Example in box--}}
             <div class="col-md-12 mb-3">
