--- a/views/faculty.handlebars
+++ b/views/faculty.handlebars
@@ -33,13 +33,13 @@
             </div>
         {{!-- input --}}
             <div class="col-md-12 mb-3">
-                <label for="input">Input</label>
-                <textarea type="text" class="form-control" id="input" name="input" rows="5" required></textarea>
+                <label for="input">Input (optional)</label>
+                <textarea type="text" class="form-control" id="input" name="input" rows="5"></textarea>
             </div>
         {{!-- output --}}
             <div class="col-md-12 mb-3">
-                <label for="output">Ouput</label>
-                <textarea type="text" class="form-control" id="output" name="output" rows="5" required></textarea>
+                <label for="output">Ouput (optional)</label>
+                <textarea type="text" class="form-control" id="output" name="output" rows="5"></textarea>
             </div>
         {{!-- Example in box--}}
             <div class="col-md-12 mb-3">
