--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -22,7 +22,7 @@
     </head>
         {{#if user}}
         <body id="main">
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow rounded m-2">
                 <a class="navbar-brand" href="{{link}}">
                     <img src="assets/reeve.png" width="30" height="30" class="d-inline-block align-top" alt=""> Code Reeve
                 </a>
