--- a/views/previous.handlebars
+++ b/views/previous.handlebars
@@ -21,33 +21,52 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-8">
-                            <h5 class="card-title">{{title}} <span id="{{_id}}" class="badge badge-secondary"></span></h5>
-                            <script>
+                            <h5 class="card-title">{{title}} <span id="time{{@index}}" class="badge badge-secondary"></span></h5>
+                            <p class="card-text">{{subject}} - {{section}} (Sem: {{sem}}, Batch: {{batch}}) </p>
+                            <input type="hidden" name="id" value="{{_id}}">
+                            <input type="hidden" name="plagiarised" value="{{plagiarised}}">
+                            
+                        </div>
+                        <div class="col-md-4">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <div class="btn btn-warning " id='check{{@index}}' name="manage" value="check">Check</div>
+                                <button class="btn btn-primary" type="submit" name="manage" value="sub">Submissions</button>
+                                <button class="btn btn-secondary" type="submit" name="manage" value="edit">Edit</button>
+                                <button class="btn btn-danger" data-toggle="confirmation" name="manage" value="delete">Delete</button>
+                            </div>
+                        </div>
+                        <script>
                             var dt{{@index}} = new Date('{{datetime}}').getTime();
-                            var x = setInterval(function() {
+                            var x{{@index}} = setInterval(function() {
                                 var now = new Date().getTime();
                                 var distance = dt{{@index}} - now;
                                 var days = Math.floor(distance / (1000 * 60 * 60 * 24));
                                 var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                                 var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
                                 var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-                                document.getElementById("{{_id}}").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+                                document.getElementById("time{{@index}}").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
                                 if (distance < 0) {
-                                    clearInterval(x);
-                                    document.getElementById("{{_id}}").innerHTML = "EXPIRED";
+                                    clearInterval(x{{@index}});
+                                    document.getElementById("time{{@index}}").innerHTML = "EXPIRED";
                                 }
                             }, 1000);
-                            </script>
-                            <p class="card-text">{{subject}} - {{section}} (Sem: {{sem}}, Batch: {{batch}}) </p>
-                            <input type="hidden" name="id" value="{{_id}}">
-                        </div>
-                        <div class="col-md-4">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button class="btn btn-primary" type="submit" name="manage" value="sub">Submissions</button>
-                                <button class="btn btn-secondary" type="submit" name="manage" value="edit">Edit</button>
-                                <button class="btn btn-danger" data-toggle="confirmation">Delete</button>
-                            </div>
-                        </div>
+                            if (dt{{@index}} > new Date().getTime()){
+                                $('#check{{@index}}').addClass('disabled')
+                            }else{
+                                {{#if checked}}
+                                $('#check{{@index}}').addClass('disabled')
+                                {{/if}}
+                                $('#check{{@index}}').on('click',()=>{
+                                $('#check{{@index}}').addClass('disabled') 
+                                $.ajax({
+                                    type: "POST",
+                                    url: '/faculty/check',
+                                    data: {assignmentID:'{{_id}}'},
+                                    dataType: 'application/json'
+                                    });
+                                })
+                            }
+                        </script>
                     </div>
                 </div>
             </div>
