--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -11,36 +11,43 @@
         <div class="alert alert-danger mt-3 text-center">{{error_msg}}</div>
     {{/if}}
     <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4 mb-3"><input class="form-control text-center shadow-lg bg-white border-0" id="myInput" type="text" placeholder="Search.."></div>
-                <div class="col-md-4"></div>
-            </div>
-    {{#each users}}
-        <form method="post" action="/admin/manage">
-            <div class="card rounded shadow p-3 mb-3">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h5 class="card-title">{{lastName}} {{firstName}} <span class="badge badge-secondary">{{user}}</span></h5>
-                            <p class="card-text">Username : {{userName}}</p>
-                            <input type="hidden" name="username" value="{{userName}}">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 mb-3"><input class="form-control text-center shadow-lg bg-white border-0" id="myInput" type="text" placeholder="Search.."></div>
+        <div class="col-md-4"></div>
+    </div>
+    <table class="table table-striped rounded bg-white shadow p-3 mb-3">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Username</th>
+                <th scope="col">Type</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {{#each users}}
+            <tr>
+                <form method="post" class="entries" action="/admin/manage">
+                    <input type="hidden" name="username" value="{{userName}}">
+                    <td>{{firstName}} {{lastName}}</th>
+                    <td>{{userName}}</td>
+                    <td>{{user}}</td>
+                    <td>
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <button class="btn btn-secondary" type="submit" name="manage" value="edit">Edit</button>
+                            <button class="btn btn-danger" type="submit" name="manage" value="delete" data-toggle="confirmation">Delete</button>
                         </div>
-                        <div class="col-md-4">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button class="btn btn-secondary" type="submit" name="manage" value="edit">Edit</button>
-                                <button class="btn btn-danger" type="submit" name="manage" value="delete" data-toggle="confirmation">Delete</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </form>
-    {{/each}}
-        <script>
-        $(document).ready(function(){
-            $("#myInput").on("keyup", function() {
-                var value = $(this).val().toLowerCase();
-                $("form").filter(function() {
+                    </td>
+                </form>
+            </tr>
+        {{/each}}
+        </tbody>
+    </table>
+    <script>
+    $(document).ready(function(){
+        $("#myInput").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("tbody tr").filter(function() {
                 $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
                 });
             });
