--- a/views/old.handlebars
+++ b/views/old.handlebars
@@ -19,22 +19,37 @@
         <div class="col-md-4 mb-3"><input class="form-control text-center shadow-lg bg-white border-0" id="myInput" type="text" placeholder="Search.."></div>
         <div class="col-md-4"></div>
     </div>
-    <div class="list-group bg-white shadow"></div>
+    <table class="table table-striped rounded bg-white shadow p-3 mb-3">
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Subject</th>
+                <th scope="col">Action</th>
+            </tr>
+        </thead>
+        <tbody>
     {{#each assignment}}
-        <form method="post" action="/student/assignment">
-        <div onClick="javascript:this.parentNode.submit()" class="list-group-item list-group-item-action">
-            <input type="hidden" name="id" value="{{_id}}">
-            <input type="hidden" name="expired" value="yes">
-            <h5 class="card-title">{{title}} ({{subject}}) </h5>
-        </div>
-        </form>
+            <tr>
+                <form method="post" action="/student/assignment">
+                    <input type="hidden" name="id" value="{{_id}}">
+                <input type="hidden" name="expired" value="yes">
+                    <td>{{title}}</th>
+                    <td>{{subject}}</td>
+                    <td>
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <button class="btn btn-success" type="submit">Review</button>
+                        </div>
+                    </td>
+                </form>
+            </tr>
     {{/each}}
-    </div>
+        </tbody>
+    </table>
     <script>
         $(document).ready(function(){
             $("#myInput").on("keyup", function() {
                 var value = $(this).val().toLowerCase();
-                $("form").filter(function() {
+                $("tbody tr").filter(function() {
                 $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
                 });
             });
